--- a/AppServSalud/src/main/resources/application.properties
+++ b/AppServSalud/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/appsalud
 spring.datasource.username=root
-spring.datasource.password=FreeLancer@2023
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.thymeleaf.cache=false
