--- a/AppServSalud/src/main/resources/application.properties
+++ b/AppServSalud/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.thymeleaf.cache=false
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
