--- a/AppServSalud/src/main/resources/application.properties
+++ b/AppServSalud/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://mauriciomaldonadoprg.store:11556/appsalud
-#spring.datasource.url=jdbc:mysql://localhost:3306/appsalud
+# spring.datasource.url=jdbc:mysql://mauriciomaldonadoprg.store:11556/appsalud
+spring.datasource.url=jdbc:mysql://localhost:3306/appsalud
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
